DDEVS-002 : config database and add readme file

--- a/MusicfyAPI/appsettings.Development.json
+++ b/MusicfyAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "MusicDbConnectionString": "User ID=postgres;Password=1234;Host=localhost;Port=5432;Database=MusicDatabase;Pooling=true;"
+    "MusicDbConnectionString": "User ID=cristian.carrasco;Password=S&Lld9tFFG3l;Host=pg.stg.latam.csnglobal.net;Port=5432;Database=Utils;Pooling=true;"
   },
   "Logging": {
     "IncludeScopes": false,
